@@ -1,3 +1,3 @@
 [run]
 include = sitemessage/*
-omit = sitemessage/migrations/*, sitemessage/south_migrations/*, sitemessage/runtests.py, sitemessage/tests.py, sitemessage/admin.py, sitemessage/config.py, sitemessage/schortcuts.py
+omit = sitemessage/migrations/*, sitemessage/tests/*, sitemessage/admin.py, sitemessage/config.py, sitemessage/schortcuts.py
